tests/unit-fail/j039a.c
int f(int x, ...) {
      return x;
}

int main(void) {
      return ((int (*)())f)(0);
}

